# spop

./: .justfile  CHANGELOG.md  Cargo.toml  LICENSE
.github/workflows/: deploy.yml  test.yml
examples/: agent_socket.rs  agent_tcp.rs
src/: actions.rs  codec.rs  frame.rs  lib.rs  parser.rs  types.rs  varint.rs
src/frames/: ack.rs  agent_hello.rs  capabilities.rs  haproxy_disconnect.rs  haproxy_hello.rs
