[package]
name = "spop"
version = "0.10.8"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Library for parsing HAProxy SPOP (Stream Processing Offload Protocol)"
documentation = "https://docs.rs/spop/latest/spop/"
repository = "https://github.com/nbari/spop"
readme = "README.md"
keywords = ["haproxy", "spop", "spoe"]
categories = ["network-programming"]
license = "BSD-3-Clause"
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
nom = "8.0"
rand = "0.10"
semver = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
name = "spop"
path = "src/lib.rs"

[[example]]
name = "agent_socket"
path = "examples/agent_socket.rs"

[[example]]
name = "agent_tcp"
path = "examples/agent_tcp.rs"
